# quick-reviewer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
cli/: config.py  llm.py  main.py  parser.py  prompts.py  report.py
knowledge/: 00-meta.md  ai_detection.md  doc_parser.md  writing_assistant.md
skills/00-meta/: SKILL.md
skills/check-figures/: SKILL.md
skills/check-grammar/: SKILL.md
skills/check-logic/: SKILL.md
skills/check-references/: SKILL.md
skills/check-structure/: SKILL.md
skills/detect-ai/: SKILL.md
skills/figures_tables/: SKILL.md
skills/grammar_spelling/: SKILL.md
skills/logic_content/: SKILL.md
skills/quick-review/: SKILL.md
skills/references/: SKILL.md
skills/review/: SKILL.md
skills/reviewer_simulator/: SKILL.md
skills/simulate-review/: SKILL.md
skills/structure_review/: SKILL.md
skills/writing-assist/: SKILL.md
