[project]
name = "quick-reviewer"
version = "2.1.0"
description = "学术论文智能审查框架"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.23"]
docx = ["python-docx>=1.0"]

[tool.setuptools.packages.find]
include = ["cli*"]

[project.scripts]
quick-reviewer = "cli.main:app"
